gcc/testsuite/rust/rustc/ui/span/E0072.rs
struct ListNode { // { dg-error ".E0072." "" { target *-*-* } }
    head: u8,
    tail: Option<ListNode>,
}

fn main() {
}

